--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,11 @@
+* {
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+}
 
+html {
+  font-size: 10px;
+  color: white;
+  user-select: none;
+}
