--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,7 @@
+:root {
+  --app-height: 100%;
+}
+
 * {
   box-sizing: border-box;
   margin: 0px;
@@ -5,7 +9,24 @@
 }
 
 html {
+  height:100vh;
+  width:100vw;
+  position:fixed;
   font-size: 10px;
   color: white;
   user-select: none;
+  overscroll-behavior-none
+}
+body{
+  
+  overscroll-behavior-none
+}
+
+#app {
+  padding: 0;
+  margin: 0;
+  width: 100vw;
+  overflow: hidden;
+  height: var(--app-height);
+  overscroll-behavior-none
 }
